Fix faulty vertical alignment of button & link components

--- a/app/styles/ember-appuniversum/_c-link.scss
+++ b/app/styles/ember-appuniversum/_c-link.scss
@@ -23,6 +23,7 @@ $au-link-secondary-active-color          : var(--au-gray-900) !default;
   display: inline-flex;
   gap: $au-unit-tiny;
   align-items: center;
+  vertical-align: middle;
   font-family: var(--au-font);
   transition: color var(--au-transition), text-decoration var(--au-transition);
   font-weight: var(--au-regular);
